--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -19,18 +19,10 @@
     "pods": "(cd ios && bundle install && bundle exec pod install)"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.17.11",
-    "@react-navigation/material-bottom-tabs": "^6.2.5",
-    "@react-navigation/native": "^6.0.14",
-    "@react-navigation/native-stack": "^6.9.2",
-    "@types/react-native-vector-icons": "^6.4.12",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-calendars": "^1.1291.1",
-    "react-native-paper": "5.0.0-rc.10",
-    "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2",
-    "react-native-vector-icons": "^9.2.0"
+    "super-app-showcase-sdk": "workspace:^"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -41,6 +33,7 @@
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
+    "@types/react-native-vector-icons": "^6.4.12",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
@@ -72,5 +65,15 @@
       "json",
       "node"
     ]
+  },
+  "peerDependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-navigation/material-bottom-tabs": "^6.2.5",
+    "@react-navigation/native": "^6.0.14",
+    "@react-navigation/native-stack": "^6.9.2",
+    "react-native-paper": "5.0.0-rc.10",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "react-native-vector-icons": "^9.2.0"
   }
 }
