--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -14,11 +14,9 @@
     "bundle:android": "react-native webpack-bundle --platform android --entry-file index.js --dev false"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.17.11",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-paper": "5.0.0-rc.10",
-    "react-native-vector-icons": "^9.2.0"
+    "super-app-showcase-sdk": "workspace:^"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -53,5 +51,15 @@
       "json",
       "node"
     ]
+  },
+  "peerDependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-navigation/material-bottom-tabs": "^6.2.5",
+    "@react-navigation/native": "^6.0.14",
+    "@react-navigation/native-stack": "^6.9.2",
+    "react-native-paper": "5.0.0-rc.10",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "react-native-vector-icons": "^9.2.0"
   }
 }
