--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "start:standalone:shell": "yarn workspace shell run start",
     "start:standalone:dashboard": "yarn workspace dashboard run start:standalone",
     "run:host:ios": "yarn workspace host run ios",
-    "run:host:android": "yarn workspace host run android",
+    "run:host:android": "adb connect 127.0.0.1:62001 && yarn workspace host run android",
     "run:shell:ios": "yarn workspace shell run ios",
-    "run:shell:android": "yarn workspace shell run android",
+    "run:shell:android": "adb connect 127.0.0.1:62001 && yarn workspace shell run android",
     "run:dashboard:ios": "yarn workspace dashboard run ios",
-    "run:dashboard:android": "yarn workspace dashboard run android",
+    "run:dashboard:android": "adb connect 127.0.0.1:62001 && yarn workspace dashboard run android",
     "bundle:auth:ios": "yarn workspace auth run bundle:ios",
-    "bundle:auth:android": "yarn workspace auth run bundle:android",
+    "bundle:auth:android": "adb connect 127.0.0.1:62001 && yarn workspace auth run bundle:android",
     "pods": "yarn workspaces foreach run pods",
     "start": "concurrently -P 'yarn:start:*(!standalone) {1}'",
     "typecheck": "yarn workspaces foreach run typecheck",
